[package]
name = "docx-you-want"
version = "0.1.0"
edition = "2021"
license = "GPL3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"
resvg = "0.47"
usvg = "0.47"
png = "0.18"
format_xml = "0.3"
zip = { version = "8", default-features = false, features = [
	"deflate",
	"time",
] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
